<resources>
    <string name="app_name">madcamp2_FE</string>
    <string name="userRegistration">회원가입</string>
    <string name="idHint">아이디를 입력하세요</string>
    <string name="passwordHint">패스워드를 입력하세요</string>
    <string name="login">로그인</string>
    <string name="connectKakao">카카오톡 연동하기</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nickname">닉네임</string>
    <string name="email">이메일</string>
    <string name="emailWarning">* 이메일은 변경할 수 없어요 *</string>
    <string name="smile">님 :)</string>
    <string name="greeting">안녕하세요</string>
    <string name="store">저장</string>
    <string name="time">시간</string>
    <string name="distance">거리</string>
    <string name="homeName">어슬렁 홈</string>
    <string name="myTab">내 기록</string>
    <string name="friendTab">친구</string>
    <string name="app">어슬렁</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>